--- a/index.html
+++ b/index.html
@@ -14,21 +14,19 @@
     <div id="container">
         <header id="header">
             <p>Tic-Tac-Toe</p>
-            <p>Player1 vs Player2</p>
+            <p id="Board">Player X's Turn</p>
         </header>
 
-        <section id="section"></section>
-
         <main id="main">
-            <div class="box">1</div>
-            <div class="box">2</div>
-            <div class="box">3</div>
-            <div class="box">4</div>
-            <div class="box">5</div>
-            <div class="box">6</div>
-            <div class="box">7</div>
-            <div class="box">8</div>
-            <div class="box">9</div>
+            <div class="box" id="1"></div>
+            <div class="box" id="2"></div>
+            <div class="box" id="3"></div>
+            <div class="box" id="4"></div>
+            <div class="box" id="5"></div>
+            <div class="box" id="6"></div>
+            <div class="box" id="7"></div>
+            <div class="box" id="8"></div>
+            <div class="box" id="9"></div>
         </main>
 
         <footer id="footer"></footer>
