--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
 
         <main id="main">
             <div class="box" id="1"></div>
-            <div class="box" id="2"></div>
+            <div class="box top-box" id="2"></div>
             <div class="box" id="3"></div>
-            <div class="box" id="4"></div>
-            <div class="box" id="5"></div>
-            <div class="box" id="6"></div>
+            <div class="box left-box" id="4"></div>
+            <div class="box middle-box" id="5"></div>
+            <div class="box right-box" id="6"></div>
             <div class="box" id="7"></div>
-            <div class="box" id="8"></div>
+            <div class="box bottom-box" id="8"></div>
             <div class="box" id="9"></div>
         </main>
 
-        <footer id="footer"></footer>
+        <footer id="footer">Awesome</footer>
     </div>
 </body>
 
